# VenvStudio

./: .gitignore  LICENSE  MANIFEST.in  PROJECT_MAP.md  README.md  README_PYPI.md  VENVSTUDIO_TODO.md  VenvStudio_Handoff.md  build.py  cli.py  diagnose.py  fix_terminal.py  installer.iss  main.py  main_patch.py  pyproject.toml  ually disable launch button for incompatible Python versions  venvstudio.sh  vs.bat  vs.py
.github/workflows/: build.yml
assets/: icon.icns
config/: settings.json
src/: cli.py  main.py  src_main.py
src/core/: cli_tools_manager.py  config_manager.py  editor_integration.py  micromamba_installer.py  pip_manager.py  python_downloader.py  recent_envs.py  system_tools_installer.py  terminal_profile_setup.py  tool_registry.py  updater.py  venv_manager (a copy from the computer KTN).py  venv_manager.py  venv_manager_cache.py  venv_manager_clone.py  venv_manager_common.py  venv_manager_rename.py
src/gui/: env_dialog (a copy from the computer KTN).py  env_dialog.py  env_dialog_create.py  env_dialog_tools.py  env_dialog_ui.py  env_export.py  env_list.py  env_operations.py  env_state.py  launcher_links.json  launcher_run.py  launcher_shortcuts.py  launcher_ui.py  learn_content.py  learn_install_dialog.py  learn_page.py  linux_fixes.py  log_viewer.py  main_window.py  main_window.py.bak  package_export.py  package_misc.py  package_ops.py  package_panel (a copy from the computer KTN).py  package_panel.py  package_panel.py.bak  package_panel_common.py  platform_utils.py  quicklaunch.py  settings_advanced.py  settings_advanced.py.bak  settings_appearance.py  settings_appearance.py.bak  settings_catalog.py  settings_common.py  settings_editors.py  settings_page.py  settings_python.py  settings_python.py.bak  settings_python_download.py  (+10 more)
src/utils/: __init__.py  constants (a copy from the computer KTN).py  constants.py  i18n.py  logger.py  platform_utils.py
src/utils/i18n_data/: ar.py  de.py  en.py  es.py  fr.py  ja.py  ko.py  pt.py  ru.py  tr.py  zh.py
tools/: gen_project_map.py
